--- a/_includes/cvpane.html
+++ b/_includes/cvpane.html
@@ -13,6 +13,6 @@
     </ul>
   </div>
   <div class="section right" style="width: 100%;">
-    <img class="avatar" src="assets/IMG_1697.JPG" alt="Luca Mazzone"  />
+    <img class="avatar" src="assets/IMG_1697.png" alt="Luca Mazzone"  />
   </div>
 </div>
