--- a/_includes/cvpane.html
+++ b/_includes/cvpane.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <div class="container">
+  <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 70%; margin-right:0px; font-size:1.3em; padding-top:150px">
+   <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
+  Hi! I am a Research Economist in the Monetary Analysis Directorate at the Bank of England. My research interests are in macroeconomics, firm dynamics, and monetary policy. My work to date has primarily focused on the interactions between firm dynamics and business cycles.
+  <br>
+
   <div class="section" style="width: 100%; ">
     <h1> &nbsp; </h1>
     <ul class="fa-ul">
