--- a/_includes/cvpane.html
+++ b/_includes/cvpane.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 
 <div class="container">
-  <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 50%; margin-right:0px; font-size:1.3em; padding-top:150px">
-   <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
-    LUCA MAZZONE
-    <br>
-
   <div class="section" style="width: 100%; ">
+     <li> LUCA MAZZONE </li>
+    <br>
     <h1> &nbsp; </h1>
     <ul class="fa-ul">
       <li><span class="fa-li"><i class="fas fa-map-marker-alt"></i></span>{{ site.university }}<br />{{ site.department }}<br />{{ site.address }}</li>
