--- a/_includes/cvpane.html
+++ b/_includes/cvpane.html
@@ -2,8 +2,7 @@
 
 <div class="container">
   <div class="section" style="width: 100%; ">
-     <li> LUCA MAZZONE </li>
-    <br>
+     LUCA MAZZONE
     <h1> &nbsp; </h1>
     <ul class="fa-ul">
       <li><span class="fa-li"><i class="fas fa-map-marker-alt"></i></span>{{ site.university }}<br />{{ site.department }}<br />{{ site.address }}</li>
