--- a/_includes/cvpane.html
+++ b/_includes/cvpane.html
@@ -2,7 +2,7 @@
 
 <div class="container">
    </div>
-  <div class="section right" style="width: 80%;">
+  <div class="section" style="width: 50%;">
     <img class="avatar" src="assets/IMG_1697.png" alt="Luca Mazzone"  />
   </div>
   <div class="section" style="width: 100%; ">
