--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
             <div class="column" style="float:left;  width: 30%; margin-right:0px; padding-top:50px">
 
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:20pt; text-align: left;  letter-spacing: 0px">
-               <img  src="IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 85%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
+               <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 85%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Andrea Alati</strong>
                </h1>
                 <a href="mailto:alati.andrea@gmail.com" class="icon_a"><i class="fa fa-envelope"></i><span class="link-text" style="">email</span> Email</a>
