--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,11 +13,11 @@
             <div class="column" style="float:left;  width: 30%; margin-right:0px; padding-top:50px">
 
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:20pt; text-align: left;  letter-spacing: 0px">
-               <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 85%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
-               <br><strong>Andrea Alati</strong>
+               <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 75%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
+               <br><strong>Luca Mazzone</strong>
                </h1>
-                <a href="mailto:alati.andrea@gmail.com" class="icon_a"><i class="fa fa-envelope"></i><span class="link-text" style="">email</span> Email</a>
-                <br><a href="https://github.com/andrealati" class="icon_a"><i class="fa fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
+                <a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i><span class="link-text" style="">email</span> Email</a>
+                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fa fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
@@ -25,8 +25,7 @@
             <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 70%; margin-right:0px; font-size:1.3em; padding-top:150px">
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
 
-              Hi! I am a Research Economist in the Monetary Analysis Directorate at the Bank of England. My research interests are in macroeconomics, firm dynamics, and monetary policy. My work to date has primarily focused on the interactions between firm dynamics and business cycles.
-
+             I am an economist at the European Department of the International Monetary Fund
 
             </div>
           </div>
