--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,8 @@
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
+                 <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email2 }}">{{ site.email2 }}</a></li>
               </div>
             <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 70%; margin-right:0px; font-size:1.3em; padding-top:150px">
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
