--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,21 +11,15 @@
       <div class='row'>
         <div class="col-lg-9 col-lg-offset-2">
             <div class="column" style="float:left;  width: 25%; margin-right:0px; padding-top:50px">
-
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:15pt; text-align: left;  letter-spacing: 0px">
                <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 75%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Luca Mazzone</strong>
                </h1>
                 <span class="link-text" style="">Contact me</span> at:</a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
-                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fa fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
+                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fas fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
-                 <h1> &nbsp; </h1>
-                <ul class="fa-ul">
-                 <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email2 }}">{{ site.email2 }}</a></li>
-                 </ul>
               </div>
             <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 70%; margin-right:0px; font-size:1.3em; padding-top:150px">
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
