--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
                <br><strong>Luca Mazzone</strong>
                </h1>
                 <span class="link-text" style="">Contact me</span> at:</a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
-                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fas fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
+                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
