--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,13 +15,13 @@
                <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 75%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Luca Mazzone</strong>
                </h1>
-                <span class="link-text" style="">Contact me</span> at:</a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
-                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i><span class="link-text" style="">github</span> GitHub</a>
+                <span class="link-text" style="">Mail me</span> at:</a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
+                <br><a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i><span class="link-text" style=""> </span> </a>
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
               </div>
-            <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 70%; margin-right:0px; font-size:1.3em; padding-top:150px">
+            <div class="column" style="float:left;  text-align: justify; text-justify: inter-word; width: 60%; margin-right:0px; font-size:1.2em; padding-top:150px">
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
 
              I am an economist at the European Department of the International Monetary Fund
