--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
     {% include head.html %}
   </head>
   
-   <section id="header" class="container text-left">
+   <section id="header" class="container text-center">
       <div class='row'>
         <div class="col-lg-9 col-lg-offset-2">
             <div class="column" style="float:center;  width: 25%; margin-right:0px; padding-top:50px">
