--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
              I am an economist at the European Department of the International Monetary Fund
               <br><span class="link-text" style="">Mail me</span> at: </a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
-                 <br><span class="link-text" style="">Repository</span> : </a><<a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i>
+                 <br><span class="link-text" style="">Repository</span> : </a><a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i>
                 <!-- <br><a href="https://twitter.com/alatiandre" class="icon_a"><i class="fa fa-twitter"></i><span class="link-text">twitter</span> Twitter</a>
                 <br><a href="skype:andrea.alati?chat" class="icon_a"><i class="fa fa-skype"></i><span class="link-text">skype</span> Skype</a>
                 -->
