--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
                   <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email2 }}">{{ site.email2 }}</a></li>
-                  <li><span class="fa-li"><i class="fas fa-phone-alt"></i></span>{{ site.phone }}</li>
+                  <li><span class="fa-li"><i class="fas fa-phone-alt"></i></span><a href="mailto:{{ site.phone }}">{{ site.phone }}</a></li> 
                   <li><span class="fa-li"><i class="fas fa-globe"></i></span><a href="{{ site.url }}">{{ site.url | replace: "https://", "" | replace: "http://", "" }}</a></li>
                 </ul>
               </div>
