--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,17 +10,15 @@
    <section id="header" class="container text-left">
       <div class='row'>
         <div class="col-lg-9 col-lg-offset-2">
-            <div class="column" style="float:left;  width: 25%; margin-right:30px; padding-top:50px">
+            <div class="column" style="float:left;  width: 25%; margin-right:50px; padding-top:50px">
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:15pt; text-align: center;  letter-spacing: 0px">
                <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 75%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Luca Mazzone</strong>
               </div>
-            <div class="column" style="float:right;  text-align: justify; text-justify: inter-word; width: 50%; margin-right:25px; font-size:1.2em; padding-top:150px">
+            <div class="column" style="float:right;  text-align: justify; text-justify: inter-word; width: 50%; margin-right:20px; font-size:1.2em; padding-top:150px">
                <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
              I am an economist at the European Department of the International Monetary Fund
-              <br><span class="link-text" style="">Mail me</span> at: </a><a href="mailto:lmazzone@imf.org" class="icon_a"><i class="fa fa-envelope"></i>
-                 <br><span class="link-text" style="">Repository</span> : </a><a href="https://github.com/lucamazzone" class="icon_a"><i class="fab fa-github"></i>
-
+              <br>Contacts:
                 <div class="section" style="width: 100%; ">
                 <h1> &nbsp; </h1>
                 <ul class="fa-ul">
