--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
   </head>
   
    <section id="header" class="container text-left">
-      <div class='row'>
+      <div class='column'>
         <div class="col-lg-9 col-lg-offset-2">
             <div class="column" style="float:left;  width: 25%; margin-right:50px; padding-top:50px">
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:15pt; text-align: center;  letter-spacing: 0px">
