--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,12 @@
 <!DOCTYPE html>
 
 <html lang="en">  
-   <section id="header" class="container text-left">
+     <head>
+    <title>{{ site.title }}</title>
+    {% include head.html %}
+   </head>
+
+   <section id="header" class="container">
       <div class='column'>
         <div class="col-lg-9 col-lg-offset-2">
             <div class="column" style="float:left;  width: 25%; margin-right:0; padding-top:50px">
