--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,20 +10,17 @@
    <section id="header" class="container">
       <div class='column'>
         <div class="col-lg-9 col-lg-offset-2">
-            <div class="column" style="float:left;  width: 25%; margin-left:10%; padding-top:25px">
+            <div class="column" style="float:center;  width: 25%; margin-left:10%; padding-top:25px">
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:15pt; text-align: center;  letter-spacing: 0px">
                <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 100%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Luca Mazzone</strong>
+               <br></b> Economist, International Monetary Fund </b>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
                   <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:{{ site.email2 }}">{{ site.email2 }}</a></li>
                   <li><span class="fa-li"><i class="fas fa-phone-alt"></i></span><a href="mailto:{{ site.phone }}">{{ site.phone }}</a></li> 
                   <li><span class="fa-li"><i class="fas fa-globe"></i></span><a href="{{ site.url }}">{{ site.url | replace: "https://", "" | replace: "http://", "" }}</a></li>
                 </ul>
-              </div>
-            <div class="column" style="float:right;  text-align: justify; text-justify: inter-word; width: 50%; margin-right:0; font-size:1.2em; padding-top:50px">
-               <!-- <p style="color:#000000; background: white; border-radius:40px; width: 100%; padding:0px; margin-bottom:0.25cm" > -->
-             I am an economist at the European Department of the International Monetary Fund
               </div>
           </div>
         </div>
