--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,16 @@
 
 <html lang="en">  
      <head>
+          
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HZJWF4THEV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-HZJWF4THEV');
+</script>
+
     <title>{{ site.title }}</title>
     {% include head.html %}
    </head>
