--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,8 @@
               <h1 style="color:#303030;border-bottom: solid 0px #303030; margin-bottom: 5px; padding-top:0px; font-size:15pt; text-align: center;  letter-spacing: 0px">
                <img  src="assets/IMG_1697.png" style="opacity: 0.9;border-radius:70px; border: 0px solid #3B5998; max-width: 100%; margin-top:70px; margin-bottom:15px;transform:rotate(0deg)">
                <br><strong>Luca Mazzone</strong>
-               <br></b> Economist, International Monetary Fund </b>
+               <br></b> Assistant Professor at CERGE-EI since September 2024; </b>
+               <br></b> Economist, International Monetary Fund (on leave) </b>
               </div>
           </div>
   </section>
