--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
                                 {{ site.university }}<br />{{ site.department }}<br />{{ site.address }}
                         </div>
                         <div class="section right" style="width: 75%; ">
-                                <a href="mailto:{{ site.email }}" class="fas fa-2x fa-envelope-square" title="Email - UC3M" id="icon"></a>
-                                <a href="mailto:{{ site.email2 }}" class="fas fa-2x fa-envelope-square" title="Email - Northwestern" id="icon"></a>
+                                <a href="mailto:{{ site.email }}" class="fas fa-2x fa-envelope-square" title="Email - Work" id="icon"></a>
+                                <a href="mailto:{{ site.email2 }}" class="fas fa-2x fa-envelope-square" title="Email - Personal" id="icon"></a>
                                 <a href="https://scholar.google.com/citations?user=r_5FrW4AAAAJ&hl=it" class="ai ai-2x ai-google-scholar-square" title="Google Scholar" id="icon"></a>
                                 <a href="https://github.com/lucamazzone" class="fab fa-2x fa-github-square" title="GitHub" id="icon"></a>
                         </div>
